31 may - add put request for monitor update time and done some changes